tests/ui/consts/const-fn-not-safe-for-const.stderr
error[E0015]: cannot call non-const function `random` in constant functions
  --> $DIR/const-fn-not-safe-for-const.rs:14:5
   |
LL |     random()
   |     ^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
